# survivors-roguelike-kit

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md
.claude/: bal-apply.json  bal-converge.json  bal-run.json
.claude/agents/: ml-code-reviewer.md  ml-test-validator.md  rl-advisor.md  unity-expert.md
.codex/agents/: ml-code-reviewer.toml  ml-test-validator.toml  rl-advisor.toml  unity-expert.toml
.github/: FUNDING.yml
Assets/Scenes/: MLInitialization.unity
Media/: README.md
ProjectSettings/: EditorBuildSettings.asset  EditorSettings.asset  ProjectSettings.asset  TagManager.asset
experiments/: v18-xp-shaping.md  v19-survival-reward.md
ml-training/: .gitignore  README.md  dashboard.py  pyproject.toml
ml-training/configs/: survivor_fighter.yaml  survivor_fighter_smoke.yaml  survivor_fighter_v18_smoke.yaml  survivor_fighter_v18_smoke2.yaml  survivor_fighter_v19_smoke.yaml
ml-training/scripts/: run_dashboard.sh
playbalance/: README.md
playbalance/plans/: plan_20260522-183705.md  plan_20260522-191647.md  plan_20260522-195659.md  plan_20260522-230935.md  plan_20260523-000000.md  plan_20260523-013000.md  plan_20260523-021500.md  plan_20260523-025232.md  plan_20260523-033832.md
playbalance/reports/: _sample_converge_20260522-144530_pass.html  converge_20260522-161957_max_iter.html  converge_20260522-185933_apply_abort_3.html  converge_20260522-193833_apply_abort_3.html  converge_20260522-201012_user_abort_pre_cycle.html  converge_20260522-235951_pass.html  converge_20260523-003641_user_abort_pre_cycle.html  converge_20260523-033026_diverged.html  (+2 more)
(+610 files in other folders)
