[project]
name = "mlagents-trainer"
version = "0.1.0"
description = "Unity ML-Agents training environment"
readme = "README.md"
requires-python = ">=3.10.1,<=3.10.12"
dependencies = [
  "mlagents==1.1.0",
  "setuptools<60",
  "torch>=2.2.1,<2.3",
]

[project.optional-dependencies]
dashboard = [
  "streamlit>=1.30",
  "plotly>=5.20",
  "pandas>=2.0",
]

[tool.uv]
override-dependencies = [
  "grpcio==1.78.0",
]
